--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   },
   "homepage": "https://github.com/henok-401-javascript/lab-10-express#readme",
   "dependencies": {
+    "@code-fellows/supergoose": "^0.2.6",
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-swagger-generator": "^1.1.17",
+    "jest": "^25.3.0",
     "mongoose": "^5.9.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "supergoose": "^0.2.6"
   }
 }
